feat(): big update

--- a/apps/mix-cms/src/app/pages/portal/dashboard/dashboard.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/dashboard/dashboard.component.scss
@@ -2,8 +2,8 @@
   height: 100%;
   padding: var(--container-padding);
   background-color: var(--background-color-primary);
-  border-top-left-radius: 12px;
-  border-bottom-left-radius: 12px;
+  // border-top-left-radius: 12px; TODO
+  // border-bottom-left-radius: 12px;
   border: 1px solid var(--tui-base-04);
   overflow: hidden;
 }
