--- a/apps/mix-database/src/app/pages/portal/dashboard/dashboard.component.scss
+++ b/apps/mix-database/src/app/pages/portal/dashboard/dashboard.component.scss
@@ -3,8 +3,8 @@
   padding: var(--container-padding);
   background-color: var(--background-color-primary);
   // border-radius: var(--border-radius-default);
-  border-top-left-radius: 12px;
-  border-bottom-left-radius: 12px;
+  // border-top-left-radius: 12px;
+  // border-bottom-left-radius: 12px; TODO
   border: 1px solid var(--border-color-default);
   overflow: hidden;
 }
