--- a/libs/mix-share/src/components/main-toolbar/main-toolbar.component.scss
+++ b/libs/mix-share/src/components/main-toolbar/main-toolbar.component.scss
@@ -1,30 +1,19 @@
 :host {
   width: 100%;
   display: flex;
-  padding: 0 var(--main-layout-gap);
 }
 
 .main-toolbar {
   width: 100%;
   display: flex;
-  border-radius: var(--border-radius-default);
   align-items: center;
-  overflow: hidden;
-  height: 48px;
+  height: 55px;
+  background-color: var(--background-color-primary);
+  z-index: 3;
 
-  &__logo {
-    width: 125px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    margin-right: 12px;
-    margin-left: 14px;
-
-    background-color: var(--primary-color);
-    -webkit-mask: url('/assets/images/mixcore-logo.svg') no-repeat 50% 50%;
-    mask: url('/assets/images/mixcore-logo.svg') no-repeat 50% 50%;
-    -webkit-mask-size: 125px 40px;
-    mask-size: 125px 40px;
+  &__expand-btn {
+    margin: 0px 16px 0px 14px;
+    transform: rotate(-180deg);
   }
 
   &__breadcrumbs {
@@ -42,7 +31,6 @@
 
   &__custom-portal {
     margin-left: 6px;
-    margin-bottom: 3px;
   }
 
   &__culture {
