--- a/libs/share-styles/src/styles/shares/page-detail.scss
+++ b/libs/share-styles/src/styles/shares/page-detail.scss
@@ -104,8 +104,8 @@
     height: 100%;
     // box-shadow: 0px 4px 22px 0px #00000033;
     // border: 1px solid var(--tui-base-04);
-    border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
+    // border-top-left-radius: 12px;
+    // border-bottom-left-radius: 12px; TODO
     overflow: hidden;
   }
 
