feat(): big update

--- a/libs/mix-share/src/components/main-toolbar/main-toolbar.component.html
+++ b/libs/mix-share/src/components/main-toolbar/main-toolbar.component.html
@@ -35,5 +35,5 @@
     </div>
   </ng-container>
 
-  <mix-user-navigation class="ms-2"></mix-user-navigation>
+  <mix-user-navigation class="ms-2 me-2"></mix-user-navigation>
 </div>
