--- a/apps/mix-cms/src/app/app.component.scss
+++ b/apps/mix-cms/src/app/app.component.scss
@@ -1,9 +1,7 @@
 .main-app {
   width: 100%;
   height: 100%;
-  background: #ece9e6;
-  background: -webkit-linear-gradient(to left, #ffffff, #ece9e6);
-  background: linear-gradient(to left, #ffffff, #ece9e6);
+  background-color: #eaf0f3;
 }
 
 .app-backdrop {
