--- a/libs/mix-share/src/components/user-profile-dialof/user-profile-dialof.component.html
+++ b/libs/mix-share/src/components/user-profile-dialof/user-profile-dialof.component.html
@@ -1,7 +1,7 @@
 <div class="mix-dialog h-full">
   <div class="container-fluid h-full">
     <div class="grid grid-cols-12 gap-4 h-full">
-      <div class="col-span-3 border-right"
+      <div class="col-span-2 border-right"
            style="background-color: #071a2b; color: #fff">
         <div class="flex flex-col items-center text-center p-3 py-5">
           <img class="rounded-circle mt-5"
@@ -12,7 +12,7 @@
         </div>
       </div>
 
-      <div class="col-span-5 p-4 pb-2 border-right">
+      <div class="col-span-6 p-4 pb-2 border-right">
         <div class="p-3 flex flex-col h-full">
           <div class="flex justify-content-between items-center mb-3">
             <h4 class="text-right">Profile Settings</h4>
@@ -49,7 +49,7 @@
                          value> </mix-input>
             </div>
           </div>
-          <div class="mt-auto flex gap-2 justify-content-end">
+          <div class="mt-auto flex gap-2 justify-end">
             <mix-button type="outline"
                         (click)="dialogRef.close()">
               Cancel
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-      <div class="col-span-5 p-4">
+      <div class="col-span-4 p-4">
         <div class="p-3 pt-5">
           <div class="col-span-12">
             <label class="text-sub text-500 mb-1">Experience in Designing</label>
