--- a/libs/mix-share/src/modules/database/database-data/database-data.component.html
+++ b/libs/mix-share/src/modules/database/database-data/database-data.component.html
@@ -66,7 +66,7 @@
           </ng-template>
 
           <mix-button *ngIf="vm.db"
-                      class="mr-auto"
+                      class="ms-auto"
                       type="outline"
                       (click)="onPreviewData(vm.db)"
                       size="m">
