--- a/libs/mix-ui/src/data-table/data-table.component.html
+++ b/libs/mix-ui/src/data-table/data-table.component.html
@@ -33,17 +33,18 @@
     <tui-loader class="h-full"
                 [overlay]="true"
                 [showLoader]="(loading && !dataset.length) || forceLoading">
-      <div class="relative overflow-x-auto sm:rounded-lg">
+      <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
         <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
           <thead class="text-xs text-gray-700 bg-gray-50 z-10 dark:bg-gray-700 dark:text-gray-400 sticky top-0">
             <tr>
               <ng-container *ngFor="let col of displayColumns; let i = index">
                 <th class="px-6 py-3">
                   <div class="flex items-center">
-                    <mix-checkbox *ngIf="i === 0"
-                                  class="me-4"
-                                  [checked]="isAllSelected"
-                                  (checkedChange)="markAllChecked($event)"></mix-checkbox>
+                    <input *ngIf="i === 0"
+                           class="form-check-input me-4"
+                           type="checkbox"
+                           [ngModel]="isAllSelected"
+                           (ngModelChange)="markAllChecked($event)">
 
                     <div class="grow">
                       <ng-container *ngIf="col.tplHeader">
@@ -75,10 +76,11 @@
                 <td class="px-6 py-2 font-medium text-gray-900 whitespace-nowrap dark:text-white"
                     [ngStyle]="{ width: col.width, 'min-width': col.minWidth }">
                   <div class="flex h-full items-center">
-                    <mix-checkbox *ngIf="i === 0"
-                                  class="me-4"
-                                  [checked]="!!currentSelectedItemDic[$any(item)[uniqueKey]]"
-                                  (checkedChange)="onItemSelected($event, item)"></mix-checkbox>
+                    <input *ngIf="i === 0"
+                           class="form-check-input me-4"
+                           type="checkbox"
+                           [ngModel]="!!currentSelectedItemDic[$any(item)[uniqueKey]]"
+                           (ngModelChange)="onItemSelected($event, item)">
 
                     <div class="grow">
                       <ng-container *ngIf="col.tplCell">
