feat(): add flag icon

--- a/libs/mix-ui/src/input/input.component.scss
+++ b/libs/mix-ui/src/input/input.component.scss
@@ -9,6 +9,6 @@
 
 @layer components {
   .btn-primary {
-    @apply block w-full bg-gray-50 p-2.5 outline-none border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary focus:ring-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+    @apply block w-full bg-gray-50 p-2.5 outline-none border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary focus:ring-1;
   }
 }
